fixed flexbox gap property for older safari versions

--- a/css/general.css
+++ b/css/general.css
@@ -68,12 +68,17 @@ html {
   /* scroll-behavior: smooth; */
 }
 
+/* Only necessary for mobile devices, because these are ignoring overflow-x: hidden on body or html element */
+.wrapper .mobile-overflow-x--hidden {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 /*************************/
